# jibaro

./: .gitignore  .tool-versions  Makefile  README.md  pyproject.toml
jibaro/: utils.py
jibaro/datalake/: avro_handler.py  cdc.py  delta_handler.py  kafka.py  proto_handler.py  proto_parser.py  protobuf_handler.py
jibaro/settings/: __init__.py  default.toml  settings.py
jibaro/spark/: readwriter.py  session.py
lake_lab/: Makefile  docker-compose.clients.yaml  docker-compose.lake.yaml  register-postgres_jsonConverter.json  register-postgres_jsonConverter_apache_version.json  setup_clients_stack.sh
lake_lab/trino/: Dockerfile
lake_lab/trino/catalog/: .gitignore
tests_scripts/: curated2kafka.py  curated2kafka_avro.py  curated2kafka_proto.py  kafka2raw.py  protobuf_tests.py  raw2staged.py  spark.properties  staged2curated.py
