[tool.poetry]
name = "jibaro"
version = "0.0.1"
description = "Library to manage layers and paths on Data Lakes with PySpark"
authors = ["Yuri Niitsuma <ignitzhjfk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
delta-spark = "2.2.0"
toml = "^0.10.2"
pydantic = "^1.10.2"
confluent-kafka = {version = ">=1.9.2", extras = ["avro", "json", "protobuf"]}
grpcio-tools = "^1.50.0"
lark-parser = "^0.12.0"
protobuf = "^4.21.9"
dill = "^0.3.6"
packaging = "^21.3"


[tool.poetry.group.dev.dependencies]
pyspark = "3.3.1"
autopep8 = "^2.0.0"
jupyter = "^1.0.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
